--- a/index.html
+++ b/index.html
@@ -3,41 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Calculator Project</title>
+  <title>Scientific Calculator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="calculator">
     <div class="display" id="display">0</div>
     <div class="buttons">
+      <!-- Scientific row -->
+      <button class="function">sin</button>
+      <button class="function">cos</button>
+      <button class="function">tan</button>
+      <button class="function">√</button>
+      
+      <button class="function">log</button>
+      <button class="function">ln</button>
+      <button class="function">x²</button>
+      <button class="function">1/x</button>
+
+      <button class="function">π</button>
+      <button class="function">e</button>
       <button class="operator">(</button>
       <button class="operator">)</button>
+
+      <!-- Standard row -->
       <button class="operator">%</button>
       <button class="all-clear">AC</button>
+      <button class="operator">÷</button>
+      <button class="operator">×</button>
 
       <button class="number">7</button>
       <button class="number">8</button>
       <button class="number">9</button>
-      <button class="operator">÷</button>
+      <button class="operator">−</button>
 
       <button class="number">4</button>
       <button class="number">5</button>
       <button class="number">6</button>
-      <button class="operator">×</button>
+      <button class="operator">+</button>
 
       <button class="number">1</button>
       <button class="number">2</button>
       <button class="number">3</button>
-      <button class="operator">−</button>
-
-      <button class="number">0</button>
-      <button class="decimal">.</button>
       <button class="equal">=</button>
-      <button class="operator">+</button>
+
+      <button class="number zero">0</button>
+      <button class="decimal">.</button>
     </div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
-
